fix select attribute and spacing in table header

--- a/src/renderer/src/common/components/table/table.scss
+++ b/src/renderer/src/common/components/table/table.scss
@@ -51,6 +51,7 @@
 					color: white;
 
 					.reset-time {
+						margin-left: 0.5rem;
 						font-weight: bold;
 						color: #09d909;
 					}
